LCODE-1233: better solution